# vis-desc

./: .gitignore  AGENTS.md  LICENSE  README.md
modules/illustrator-app/services/api/: .directory  .gitignore  build.sh  pyproject.toml  run.sh  setup.py  setup_and_run.sh
modules/illustrator-app/services/api/api/: asgi.py  env.py  urls.py
modules/illustrator-app/services/api/core/: api.py  apps.py  consumers.py  schemas.py  tasks.py  utils.py
modules/illustrator-app/services/api/tests/: test_batch_image_endpoints.py
modules/lab/: .editorconfig  .gitignore  CLAUDE.md  Dockerrun.aws.json  README.md  dataset_stats_plan.md  latex_tables.md  plots.md  pyproject.toml  requirements.txt
modules/lab/data/: processed_books.json
modules/lab/data/books/: .directory  54-40-or-fight.txt  a-loose-end-and-other-stories.txt  a-maid-of-the-silver-sea.txt  a-man-s-woman.txt  a-millionaire-of-yesterday.txt  a-princess-of-mars.txt  a-tale-of-three-lions.txt  a-voyage-of-consolation-being-in-the-nature-of-a-sequel-to-the-experiences-of-an-american-girl-in-london.txt  allan-and-the-holy-flower.txt  an-englishwoman-s-love-letters.txt  an-outback-marriage-a-story-of-australian-life.txt  an-unpardonable-liar.txt  arizona-nights.txt  at-the-earth-s-core.txt  atlantida.txt  aunt-jane-s-nieces-abroad.txt  austin-and-his-friends.txt  australia-felix.txt  ayesha-the-return-of-she.txt  balcony-stories.txt  bart-stirling-s-road-to-success-or-the-young-express-agent.txt  before-adam.txt  bunner-sisters.txt  buried-alive-a-tale-of-these-days.txt  burning-daylight.txt  captain-blood.txt  captain-macklin-his-memoirs.txt  captivity.txt  carette-of-sark.txt  castles-in-the-air.txt  children-of-the-frost.txt  children-of-the-market-place.txt  children-of-the-mist.txt  count-hannibal-a-romance-of-the-court-of-france.txt  crucial-instances.txt  dangerous-ages.txt  darkness-and-dawn.txt  dead-men-tell-no-tales.txt  desert-gold.txt  (+360 more)
modules/lab/data/books/meta/: 54-40-or-fight.json  a-loose-end-and-other-stories.json  a-maid-of-the-silver-sea.json  a-man-s-woman.json  a-millionaire-of-yesterday.json  a-princess-of-mars.json  a-tale-of-three-lions.json  a-voyage-of-consolation-being-in-the-nature-of-a-sequel-to-the-experiences-of-an-american-girl-in-london.json  allan-and-the-holy-flower.json  an-englishwoman-s-love-letters.json  an-outback-marriage-a-story-of-australian-life.json  an-unpardonable-liar.json  arizona-nights.json  at-the-earth-s-core.json  atlantida.json  aunt-jane-s-nieces-abroad.json  austin-and-his-friends.json  australia-felix.json  ayesha-the-return-of-she.json  balcony-stories.json  bart-stirling-s-road-to-success-or-the-young-express-agent.json  before-adam.json  bunner-sisters.json  buried-alive-a-tale-of-these-days.json  burning-daylight.json  captain-blood.json  captain-macklin-his-memoirs.json  captivity.json  carette-of-sark.json  castles-in-the-air.json  children-of-the-frost.json  children-of-the-market-place.json  children-of-the-mist.json  count-hannibal-a-romance-of-the-court-of-france.json  crucial-instances.json  dangerous-ages.json  darkness-and-dawn.json  dead-men-tell-no-tales.json  desert-gold.json  diane-of-the-green-van.json  (+359 more)
modules/lab/data/datasets/large/: heuristic_labeling_progress.json  heuristic_train_set.csv  heuristic_train_set_combined.csv  heuristic_validation_set.csv  heuristic_validation_set_progress.json
modules/lab/data/datasets/small/: agreed.csv  agreed.parquet  agreed2.csv  annotated01.json  annotated02.json  annotated03.json  annotated04.json  annotated05.json  annotated06.json  annotated07.json  annotated08.json  balanced.parquet  balanced_train.parquet  label_studio_interface_v1.xml  label_studio_interface_v2.xml  label_studio_interface_v3.xml  label_studio_interface_v4.xml  label_studio_interface_v5.xml  minilm_embeddings.parquet  test.parquet  test_balanced.parquet  train.parquet
modules/lab/data/features/concreteness/: places.txt  words.csv
modules/lab/data/metrics/: metric-docs.md
modules/lab/data/metrics/encoder/: catboost_mbert_lg_test_42_2025-11-23-10-41-49.json  catboost_mbert_lg_test_42_2025-12-15-20-11-24.json  catboost_mbert_lg_train_42_2025-11-23-10-41-49.json  catboost_mbert_lg_train_42_2025-12-15-20-11-24.json  catboost_mbert_lg_val_42_2025-11-23-10-53-22.json  catboost_mbert_lg_val_42_2025-12-03-19-09-14.json  catboost_mbert_test_42_2025-11-21-22-28-36.json  catboost_mbert_train_42_2025-11-21-22-28-36.json  catboost_mbert_val_42_2025-12-03-19-03-46.json  catboost_minilm_features-extract_3+syllable_count_ratio_test_40_2026-02-28-11-26-34.json  catboost_minilm_features-extract_3+syllable_count_ratio_test_41_2026-02-28-11-27-09.json  catboost_minilm_features-extract_3+syllable_count_ratio_test_42_2026-02-28-11-27-42.json  catboost_minilm_features-extract_3+syllable_count_ratio_train_40_2026-02-28-11-26-34.json  catboost_minilm_features-extract_3+syllable_count_ratio_train_41_2026-02-28-11-27-09.json  catboost_minilm_features-extract_3+syllable_count_ratio_train_42_2026-02-28-11-27-42.json  catboost_minilm_features-extract_articles_test_40_2026-02-28-11-29-57.json  catboost_minilm_features-extract_articles_test_41_2026-02-28-11-30-31.json  (+368 more)
modules/lab/data/metrics/llm/: metric-docs.md  (+1 more)
modules/lab/data/optuna/: delete_study.py
modules/lab/data/to-annotate/: batch_001.json  batch_002.json  batch_002_m.json  batch_002_v.json
modules/lab/src/: agreement.py  book_preprocessing.py  book_segmenting.py  check_sync.py  dataset_concreteness.ipynb  dataset_large.ipynb  dataset_referential_and_lg_heuristic.ipynb  dataset_small.ipynb  dataset_stats.ipynb  feature_extractors.ipynb  features.py  gpu_info.py  label_studio_models.py  ref_data_features.ipynb  text2features.py  text2features_paths.py  utils.py
modules/lab/src/dataset_small/: agreement.py  book_collection.ipynb  book_collection.py  book_preprocessing.py  dataset_small.ipynb  genre_descr.ipynb  label_studio_models.py  segment_sampling.ipynb  segment_sampling.py
modules/lab/src/evaluation/: core.py  helpers.py  overall.ipynb  plot_style.py  problem_cases.ipynb
(+566 files in other folders)
