[project]
name = "vis-desc-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "datasets>=3.3.2",
    "factgenie>=1.1.0",
    "firebase-admin>=6.6.0",
    "gradio>=5.43.1",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "langchain-experimental>=0.3.4",
    "langchain-google-vertexai>=2.0.14",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.8",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pymupdf>=1.25.3",
    "regex>=2024.11.6",
    "scikit-learn>=1.6.1",
    "semantic-text-splitter>=0.27.0",
    "sentence-transformers>=3.4.1",
    "slugify>=0.0.1",
    "tensorflow>=2.18.0",
    "tensorflow-hub>=0.16.1",
    "tf-keras>=2.18.0",
    "tf-models-official>=2.18.0",
    "ydata-profiling>=4.12.2",
]
