[project]
name = "vis-desc-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "booknlp",
    "catboost>=1.2.8",
    "colorama>=0.4.6",
    "datasets>=3.3.2",
    "en-core-web-sm",
    "factgenie>=1.1.0",
    "firebase-admin>=6.6.0",
    "gradio>=5.43.1",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "langchain-experimental>=0.3.4",
    "langchain-google-vertexai>=2.0.14",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.8",
    "light-embed>=0.1.2",
    "matplotlib>=3.10.1",
    "mord>=0.7",
    "nltk>=3.9.1",
    "onnx==1.18",
    "openpyxl>=3.1.5",
    "optimum-onnx[onnxruntime]>=0.0.3",
    "optuna>=4.5.0",
    "optuna-dashboard>=0.19.0",
    "pandas>=2.2.3",
    "pymupdf>=1.25.3",
    "regex>=2024.11.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "semantic-text-splitter>=0.27.0",
    "sentence-transformers>=3.4.1",
    "skl2onnx>=1.19.1",
    "slugify>=0.0.1",
    "spacy>=3.8.7",
    "syllables>=1.1.1",
    "tensorflow>=2.18.0",
    "tensorflow-hub>=0.16.1",
    "tf-keras>=2.18.0",
    "tf-models-official>=2.18.0",
    "wn>=0.13.0",
    "ydata-profiling>=4.12.2",
    "zodb>=6.1",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
booknlp = { git = "https://github.com/itzTerra/booknlp" }
