[project]
name = "vis-desc-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "booknlp",
    "catboost>=1.2.8",
    "colorama>=0.4.6",
    "datasets>=3.3.2",
    "en-core-web-sm",
    "gradio>=5.43.1",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "light-embed>=0.1.2",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "onnx==1.18",
    "onnxscript>=0.5.0",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "optimum-onnx[onnxruntime]>=0.0.3",
    "optuna>=4.5.0",
    "optuna-dashboard>=0.19.0",
    "pandas>=2.2.3",
    "peft>=0.18.0",
    "pymupdf>=1.25.3",
    "regex>=2024.11.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "semantic-text-splitter>=0.27.0",
    "sentence-transformers>=3.4.1",
    "skl2onnx>=1.19.1",
    "slugify>=0.0.1",
    "spacy>=3.8.7",
    "syllables>=1.1.1",
    "tensorflow>=2.18.0",
    "tensorflow-hub>=0.16.1",
    "tf-keras>=2.18.0",
    "tf-models-official>=2.18.0",
    "tqdm>=4.67.1",
    "wn>=0.13.0",
    "ydata-profiling>=4.12.2",
    "zodb>=6.1",
]

[project.optional-dependencies]
cpu = [
    "intel-openmp==2024.2.1",
    "torch==2.9.1+cpu",
    "torchvision==0.24.1+cpu",
    "vllm @ https://github.com/vllm-project/vllm/releases/download/v0.13.0/vllm-0.13.0+cpu-cp38-abi3-manylinux_2_35_x86_64.whl",
]
gpu = [
    "onnxruntime-gpu==1.23.2",
    "torch==2.9.1+cu126",
    "torchvision==0.24.1+cu126",
    "vllm @ https://github.com/vllm-project/vllm/releases/download/v0.13.0/vllm-0.13.0+cu124-cp38-abi3-manylinux_x86_64.whl",
]

[tool.uv]
conflicts = [
    [
      { extra = "cpu" },
      { extra = "gpu" },
    ],
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
booknlp = { git = "https://github.com/itzTerra/booknlp" }
torch = [
    { index = "torch-all" },
]
torchvision = [
    { index = "torch-all" },
]

[[tool.uv.index]]
name = "torch-all"
url = "https://download.pytorch.org/whl/"
explicit = true
